--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -8,6 +8,12 @@ html {
     min-height: 100% !important;
 }
 
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .App {
     display: flex;
     flex-direction: column;
@@ -130,7 +136,27 @@ main {
     cursor: not-allowed;
 }
 
+/* ScrollBar */
 
+.scrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: rgb(26, 25, 25);
+}
+
+.scrollbar::-webkit-scrollbar, body::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: rgb(26, 25, 25);
+}
+
+.scrollbar::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(0, 105, 92);
+}
 
 
 /* Call to Action 1 */
